[quick-search] update views

--- a/ui/app/styles/search.scss
+++ b/ui/app/styles/search.scss
@@ -13,10 +13,7 @@ ul.selection-list li.sl-line:hover {
 }
 
 .movie-background {
-  background: url('./../img/film-black.svg') no-repeat center left;
-  background-size: 40px 40px;
-  width: 40px;
-  height: 40px;
+  font-size: 40px;
   margin: 5px 5px 0 0;
   float: left;
 }
