{left-menu] add new items.

--- a/ui/app/styles/menu.scss
+++ b/ui/app/styles/menu.scss
@@ -79,6 +79,7 @@
         padding-top: 20px;
         height: 60px;
         width: 60px;
+        color: $color-blanc;
       }
       a img {
         width:20px;
