update details view.

--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -4,8 +4,8 @@ hr {
   border-top: solid 1px $color-gris2
 }
 body {
-  background-color:  $color-blanc;
-  font-family: RobotoRegular;
+  background-color: $color-background;
+  font-family: Roboto;
   font-size: 12px;
   word-wrap: break-word;
 }
