--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -13,6 +13,10 @@ $color-jaune:   #ffbe60;
 $color-noir:    #000;
 $color-noir2:   #242a30;
 
+$color-background: #f8f8f8;
+$detail-bloc-color:#fff;
+$detail-bloc-border:#d7d7d7;
+
 body {
  border: none;
 }
