--- a/ui/app/styles/detail.scss
+++ b/ui/app/styles/detail.scss
@@ -1,11 +1,19 @@
 @import "./variables";
 
-.details {
-  background-color: white;
-  border: solid 1px $color-gris2;
-  margin-left: 270px;
-  position: relative;
-  padding-left: 20px;
+.detail {
+  padding: 300px 25px 40px 25px;
+}
+
+.detail-content {
+  margin-left:270px;
+
+  .block {
+    background-color: white;
+    border: solid 1px $detail-bloc-border;
+    padding: 15px;
+    box-shadow: 1px 1px 5px 0px $detail-bloc-border;
+    margin-bottom: 15px;
+  }
 }
 
 .slidingBloc {
