--- a/ui/app/styles/font.scss
+++ b/ui/app/styles/font.scss
@@ -1,30 +1,7 @@
 @import "./variables";
 
+@import url(http://fonts.googleapis.com/css?family=Roboto:400italic,700italic,300,700,300italic,400|Raleway:700,400,300);
 
-/* @font-face kit by Fonts2u (http://www.fonts2u.com) */
-@font-face {
-  font-family:"RalewayExtraBold";
-  src: url('../fonts/Raleway-ExtraBold.ttf');
-  font-weight:normal;
-  font-style:normal;
-}
-
-@font-face {
-  font-family:"RobotoBold";
-  src: url('../fonts/Roboto-Bold.ttf');
-  font-weight:normal;
-  font-style:normal;
-}
-
-@font-face {
-  font-family:"RobotoRegular";
-  src: url('../fonts/Roboto-Regular.ttf');
-  font-weight:normal;
-  font-style:normal;
-}
-@font-face {
-  font-family:"RobotoItalic";
-  src: url('../fonts/Roboto-Italic.ttf');
-  font-weight:normal;
-  font-style:normal;
+* {
+  font-family: Roboto;
 }
