--- a/ui/app/styles/header.scss
+++ b/ui/app/styles/header.scss
@@ -33,7 +33,8 @@ header[data-focus-header] {
 .header-title {
   font-size: 28px;
   text-transform: none;
-  font-family: RobotoBold;
+  font-family: Roboto;
+  font-weight: bold;
   margin-left: 12px;
 }
 .actions-left {
