--- a/ui/app/styles/quick-search.scss
+++ b/ui/app/styles/quick-search.scss
@@ -136,7 +136,8 @@
    top: 30%;
    left: 105%;
    font-size: 19px;
-   font-family: RobotoItalic;
+   font-family: Roboto;
+   font-style: italic;
    width: 280px;
    color: $color-blanc;
    border: 1px solid transparent;
@@ -190,7 +191,8 @@
  }
 
  .movie-preview-imdb-id {
-   font-family: RobotoBold;
+   font-family: Roboto;
+   font-weight: bold;
  }
 
  .movie-preview-detail {
@@ -198,14 +200,16 @@
    font-size: 14px;
    .title {
      color: $color-gris;
-     font-family: RobotoBold;
+     font-family: Roboto;
+     font-weight: bold;
      font-size: 18px;
      width: 100px;
      float: left;
      margin-bottom: 15px;
    }
    .movie-detail-label {
-     font-family: RobotoBold;
+     font-family: Roboto;
+     font-weight: bold;
      width: 120px;
      float: left;
      text-align: right;
