--- a/api/src/main/webapp/static/stylesheets/app.css
+++ b/api/src/main/webapp/static/stylesheets/app.css
@@ -6,6 +6,143 @@
 div[data-component] {
   color: red; }
 
+.live-filter.collapsed {
+  width: 30px; }
+
+.live-filter.expanded {
+  width: 250px; }
+
+.live-filter {
+  min-height: 400px; }
+  .live-filter .icon {
+    float: right;
+    height: inherit; }
+  .live-filter .facet-selected .panel-heading {
+    background-image: url("../img/cross.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-collapsed .panel-heading {
+    background-image: url("../img/chevron-thin-down.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .facet-expanded .panel-heading {
+    background-image: url("../img/chevron-thin-up.svg");
+    background-repeat: no-repeat;
+    background-position: 90%; }
+  .live-filter .panel-heading {
+    cursor: pointer; }
+  .live-filter ul {
+    list-style-type: none; }
+  .live-filter li {
+    cursor: pointer; }
+  .live-filter li:hover {
+    color: #E6E6E6; }
+
+.chevron-thin-left {
+  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
+
+.chevron-thin-right {
+  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
+
+/* Style for the quick-search-component*/
+/* Variables*/
+/* Style */
+div.qs-quick-search {
+  width: 100%;
+  position: relative;
+  height: 70px;
+  /* Input block */
+  /* Help block.*/ }
+  div.qs-quick-search div.qs-scope {
+    width: 70px;
+    height: 35px;
+    background-color: #595959;
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 12px;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1; }
+    div.qs-quick-search div.qs-scope > div {
+      padding: 4px 25px 4px 2px; }
+    div.qs-quick-search div.qs-scope div {
+      color: white;
+      text-align: center;
+      height: 100%; }
+      div.qs-quick-search div.qs-scope div.qs-icon > div {
+        background-size: 22px; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
+        background: url('../img/arrow-up.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
+        background: url('../img/arrow-down.svg') no-repeat center right; }
+      div.qs-quick-search div.qs-scope div div {
+        /*padding-top: 3px;
+        padding-right: 3px;
+        padding-bottom: 3px;
+        padding-left: 3px;*/
+        border: 2px solid white; }
+        div.qs-quick-search div.qs-scope div div {
+          /*width:100%;
+          height:100%;*/
+          border: none; }
+        div.qs-quick-search div.qs-scope div div.qs-scope-none {
+          background: url('../img/qs-none.svg') no-repeat center center;
+          background-size: 100% 100%; }
+    div.qs-quick-search div.qs-scope ul {
+      position: absolute;
+      font-size: 12pt;
+      background-color: #595959;
+      padding: 10px; }
+      div.qs-quick-search div.qs-scope ul li {
+        background-position: center left 5px;
+        list-style-type: none;
+        color: white;
+        height: 32px;
+        line-height: 32px;
+        min-width: 120px;
+        padding-left: 40px;
+        background-size: 22px;
+        font-size: 14px;
+        cursor: pointer; }
+        div.qs-quick-search div.qs-scope ul li:hover {
+          background-color: rgba(141, 134, 134, 0.62); }
+        div.qs-quick-search div.qs-scope ul li.active {
+          font-weight: bold; }
+  div.qs-quick-search input[type=search] {
+    padding-top: 6px;
+    padding-right: 12px;
+    padding-bottom: 6px;
+    padding-left: 70px;
+    width: 100%;
+    height: 35px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+    div.qs-quick-search input[type=search].qs-loading {
+      background: #FFF url(../img/loading.gif) no-repeat right center; }
+  div.qs-quick-search div.qs-help {
+    z-index: 2;
+    position: relative;
+    top: 40px;
+    padding-left: 45px;
+    left: 50px;
+    background: url('../img/help-arrow.svg') no-repeat center left; }
+
+.qs-scope-1 {
+  background: url('../img/earth.svg') no-repeat center center; }
+
+.qs-scope-2 {
+  background: url('../img/user.svg') no-repeat center center; }
+
+.qs-scope-3 {
+  background: url('../img/rocket.svg') no-repeat center center; }
+
+.qs-scope-none {
+  background: url('../img/qs-none.svg') no-repeat center center; }
+
 .checkbox-unchecked {
   background: url("../img/checkbox-unchecked.svg") no-repeat center; }
 
@@ -39,6 +176,7 @@ div[data-component] {
   border-left: solid 2px; }
 .action-bar .facet-container {
   width: 400px; }
+
 
 /* Style for the list component*/
 /*variables*/
@@ -85,7 +223,6 @@ ul.selection-list {
       position: absolute;
       right: 0px; }
 
-
 .print {
   background: url("../img/print.svg") no-repeat center; }
 
@@ -97,6 +234,22 @@ ul.selection-list {
   display: inline-block;
   float: right;
   padding: 0 25px 0 25px; }
+
+table.table-list {
+  background-color: #FFF;
+  width: 100%;
+  margin: 1em 0;
+  color: black; }
+  table.table-list th {
+    padding: 1em 0 0 0.5em;
+    font-weight: bold;
+    border-bottom: 1px solid; }
+    table.table-list th a.sort {
+      margin-left: 0.5em; }
+  table.table-list td {
+    padding: 1em 0.5em; }
+  table.table-list tbody tr:nth-child(even) {
+    background-color: #EAF3F3; }
 
 /** css from : http://codepen.io/betdream/details/Ifvbi**/
 .timeline {
@@ -215,21 +368,40 @@ ul.selection-list {
 .timeline-body > p + p {
   margin-top: 5px; }
 
-table.table-list {
-  background-color: #FFF;
-  width: 100%;
-  margin: 1em 0;
-  color: black; }
-  table.table-list th {
-    padding: 1em 0 0 0.5em;
-    font-weight: bold;
-    border-bottom: 1px solid; }
-    table.table-list th a.sort {
-      margin-left: 0.5em; }
-  table.table-list td {
-    padding: 1em 0.5em; }
-  table.table-list tbody tr:nth-child(even) {
-    background-color: #EAF3F3; }
+form.form-edit {
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(240, 89, 100, 0.65);
+  background-color: rgba(137, 108, 108, 0.14); }
+
+.icon {
+  float: left;
+  width: 40px;
+  height: 40px;
+  cursor: pointer; }
+
+.dots-three-vertical {
+  background: url("../img/dots-three-vertical.svg") no-repeat center; }
+
+.select-action li.selected a {
+  font-weight: bold; }
+
+.topic-displayer .topic {
+  background: url("../img/cross.svg") no-repeat right center; }
+
+.sticky-navigation li.active {
+  font-weight: bold; }
+
+
+.btns-confirmation-popin {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin: 0 20px 10px 0; }
+
+.btn-confirmation-popin-close {
+  margin-right: 20px !important; }
+
 
 header[data-focus-header] {
   width: 100%;
@@ -407,16 +579,6 @@ header[data-focus-header] {
   .menu-push-toright {
     left: 190px; } }
 
-.btns-confirmation-popin {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  margin: 0 20px 10px 0; }
-
-.btn-confirmation-popin-close {
-  margin-right: 20px !important; }
-
-
 .popin {
   position: fixed; }
   .popin .full {
@@ -477,167 +639,15 @@ header[data-focus-header] {
   left: 0;
   position: absolute; }
 
+.liveFilterContainer {
+  padding-right: 10px; }
 
-form.form-edit {
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgba(240, 89, 100, 0.65);
-  background-color: rgba(137, 108, 108, 0.14); }
+.search-result .liveFilterContainer, .search-result .resultContainer {
+  vertical-align: top;
+  float: left; }
 
-.icon {
-  float: left;
-  width: 40px;
-  height: 40px;
-  cursor: pointer; }
-
-.dots-three-vertical {
-  background: url("../img/dots-three-vertical.svg") no-repeat center; }
-
-.select-action li.selected a {
-  font-weight: bold; }
-
-.sticky-navigation li.active {
-  font-weight: bold; }
-
-.topic-displayer .topic {
-  background: url("../img/cross.svg") no-repeat right center; }
-
-.live-filter.collapsed {
-  width: 30px; }
-
-.live-filter.expanded {
-  width: 250px; }
-
-.live-filter {
-  min-height: 400px; }
-  .live-filter .icon {
-    float: right;
-    height: inherit; }
-  .live-filter .facet-selected .panel-heading {
-    background-image: url("../img/cross.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-collapsed .panel-heading {
-    background-image: url("../img/chevron-thin-down.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .facet-expanded .panel-heading {
-    background-image: url("../img/chevron-thin-up.svg");
-    background-repeat: no-repeat;
-    background-position: 90%; }
-  .live-filter .panel-heading {
-    cursor: pointer; }
-  .live-filter ul {
-    list-style-type: none; }
-  .live-filter li {
-    cursor: pointer; }
-  .live-filter li:hover {
-    color: #E6E6E6; }
-
-.chevron-thin-left {
-  background: url("../img/chevron-thin-left.svg") no-repeat right center; }
-
-.chevron-thin-right {
-  background: url("../img/chevron-thin-right.svg") no-repeat right center; }
-
-/* Style for the quick-search-component*/
-/* Variables*/
-/* Style */
-div.qs-quick-search {
-  width: 100%;
-  position: relative;
-  height: 70px;
-  /* Input block */
-  /* Help block.*/ }
-  div.qs-quick-search div.qs-scope {
-    width: 70px;
-    height: 35px;
-    background-color: #595959;
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 12px;
-    padding: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; }
-    div.qs-quick-search div.qs-scope > div {
-      padding: 4px 25px 4px 2px; }
-    div.qs-quick-search div.qs-scope div {
-      color: white;
-      text-align: center;
-      height: 100%; }
-      div.qs-quick-search div.qs-scope div.qs-icon > div {
-        background-size: 22px; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-up {
-        background: url('../img/arrow-up.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div.qs-scope-deploy-down {
-        background: url('../img/arrow-down.svg') no-repeat center right; }
-      div.qs-quick-search div.qs-scope div div {
-        /*padding-top: 3px;
-        padding-right: 3px;
-        padding-bottom: 3px;
-        padding-left: 3px;*/
-        border: 2px solid white; }
-        div.qs-quick-search div.qs-scope div div {
-          /*width:100%;
-          height:100%;*/
-          border: none; }
-        div.qs-quick-search div.qs-scope div div.qs-scope-none {
-          background: url('../img/qs-none.svg') no-repeat center center;
-          background-size: 100% 100%; }
-    div.qs-quick-search div.qs-scope ul {
-      position: absolute;
-      font-size: 12pt;
-      background-color: #595959;
-      padding: 10px; }
-      div.qs-quick-search div.qs-scope ul li {
-        background-position: center left 5px;
-        list-style-type: none;
-        color: white;
-        height: 32px;
-        line-height: 32px;
-        min-width: 120px;
-        padding-left: 40px;
-        background-size: 22px;
-        font-size: 14px;
-        cursor: pointer; }
-        div.qs-quick-search div.qs-scope ul li:hover {
-          background-color: rgba(141, 134, 134, 0.62); }
-        div.qs-quick-search div.qs-scope ul li.active {
-          font-weight: bold; }
-  div.qs-quick-search input[type=search] {
-    padding-top: 6px;
-    padding-right: 12px;
-    padding-bottom: 6px;
-    padding-left: 70px;
-    width: 100%;
-    height: 35px;
-    position: absolute;
-    top: 0;
-    left: 0; }
-    div.qs-quick-search input[type=search].qs-loading {
-      background: #FFF url(../img/loading.gif) no-repeat right center; }
-  div.qs-quick-search div.qs-help {
-    z-index: 2;
-    position: relative;
-    top: 40px;
-    padding-left: 45px;
-    left: 50px;
-    background: url('../img/help-arrow.svg') no-repeat center left; }
-
-.qs-scope-1 {
-  background: url('../img/earth.svg') no-repeat center center; }
-
-.qs-scope-2 {
-  background: url('../img/user.svg') no-repeat center center; }
-
-.qs-scope-3 {
-  background: url('../img/rocket.svg') no-repeat center center; }
-
-.qs-scope-none {
-  background: url('../img/qs-none.svg') no-repeat center center; }
+.listSummaryContainer {
+  height: 50px; }
 
 /*Inspiration http://codepen.io/Sambego/pen/zDLxe*/
 div.paper-cb label.paper-cb-label {
@@ -980,16 +990,6 @@ div.paper-cb label.paper-cb-label {
       background: #fff;
       cursor: pointer; }
 
-
-.liveFilterContainer {
-  padding-right: 10px; }
-
-.search-result .liveFilterContainer, .search-result .resultContainer {
-  vertical-align: top;
-  float: left; }
-
-.listSummaryContainer {
-  height: 50px; }
 
 /*Spinner container*/
 .spinner{
@@ -79557,7 +79557,7 @@ hr {
 /* line 6, stdin */
 /* line 10, stdin */
 body {
-  background-color: #f8f8f8;
+  background-color: #f0f1f3;
   font-family: Roboto;
   font-size: 12px;
   word-wrap: break-word; }
@@ -79592,7 +79592,7 @@ body {
 /* line 3, stdin */
 /* line 6, stdin */
 .detail {
-  padding: 300px 25px 40px 25px; }
+  padding: 300px 0 40px 0; }
 
 /* line 7, stdin */
 /* line 10, stdin */
@@ -79603,9 +79603,9 @@ body {
 /* line 13, stdin */
 .detail-content .block {
   background-color: white;
-  border: solid 1px #d7d7d7;
+  border: solid 1px #e7e7e7;
   padding: 15px;
-  box-shadow: 1px 1px 5px 0px #d7d7d7;
+  box-shadow: 1px 1px 5px 0px #e7e7e7;
   margin-bottom: 15px; }
 
 /* line 21, stdin */
@@ -79909,10 +79909,11 @@ body {
 #page {
   display: inline-block;
   width: 100%;
-  min-width: 1300px; }
+  min-width: 1300px;
+  padding: 25px; }
 
-/* line 33, stdin */
 /* line 34, stdin */
+/* line 35, stdin */
 .clear {
   clear: both; }
 
