--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -6,7 +6,7 @@ hr {
 
 body {
   background-color: $color-background;
-  font-family: Roboto;
+  font-family: $font-family;
   font-size: 12px;
   word-wrap: break-word;
 }
