--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -13,9 +13,9 @@ $color-jaune:   #ffbe60;
 $color-noir:    #000;
 $color-noir2:   #242a30;
 
+$font-family: "Roboto";
 $color-background: #f0f1f3;
-$detail-bloc-color:#fff;
-$detail-bloc-border:#e7e7e7;
+
 
 body {
  border: none;
