--- a/ui/app/styles/default.scss
+++ b/ui/app/styles/default.scss
@@ -7,7 +7,7 @@ hr {
 body {
   background-color: $color-background;
   font-family: $font-family;
-  font-size: 12px;
+  font-size: 12pt;
   word-wrap: break-word;
 }
 
