--- a/ui/app/styles/page.scss
+++ b/ui/app/styles/page.scss
@@ -12,21 +12,10 @@
   z-index: 1006;
 }
 
-#pageContent {
-  margin-left:  $sidebar-width;
-}
-
-#header {
-  position: absolute;
-  left:0;
-  right: 0;
-}
-
 #page {
-  display: inline-block;
-  width: 100%;
   min-width: 1300px;
   padding: 25px;
+  padding-left:  $sidebar-width+25px;
 }
 
 .clear{
