--- a/ui/app/styles/detail.scss
+++ b/ui/app/styles/detail.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 
+/*
 .detail {
   padding: 85px 0 40px 0;
 }
@@ -7,3 +8,4 @@
 .detail-content {
   margin-left:270px;
 }
+*/
