--- a/ui/app/styles/header.scss
+++ b/ui/app/styles/header.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 
+/*
 .user-infos i {
   font-size: 24px;
 }
@@ -36,6 +37,7 @@
 .actions-left {
   margin-top: 10px;
 }
+*/
 
 //Le résumé de la fich n'est pas affiché en mode medium.
 /*header[data-focus="header"]{
