--- a/ui/app/styles/menu.scss
+++ b/ui/app/styles/menu.scss
@@ -1,3 +1,4 @@
+/*
 @import "./variables";
 
  $menu-item-width:100px;
@@ -97,4 +98,4 @@
 
   #quick-search-link {
     cursor: pointer;
-  }
+  }*/
