--- a/ui/app/styles/page.scss
+++ b/ui/app/styles/page.scss
@@ -1,4 +1,5 @@
- @import "./variables";
+/*
+@import "./variables";
  $sidebar-width:60px;
  $border-color: #c3c3c3;
 
@@ -20,4 +21,4 @@
 
 .clear{
   clear: both;
-}
+}*/
