--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -12,11 +12,10 @@ $color-rouge2:  #f82239;
 $color-jaune:   #ffbe60;
 $color-noir:    #000;
 $color-noir2:   #242a30;
-
 $font-family: "Roboto";
 $color-background: #f8f8f8;
 
 
 body {
- border: none;
+ border: 0;
 }
