[menu] refactoring of css styles

--- a/ui/app/styles/menu.scss
+++ b/ui/app/styles/menu.scss
@@ -1,3 +1,9 @@
+
+[data-focus="menu-brand"] {
+  background: #424950 url("../img/brand.png") no-repeat;
+  background-position: 50%;
+}
+
 /*
 @import "./variables";
 
